--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
-Qt 5.12.3 is a bug-fix release. It maintains both forward and backward
-compatibility (source and binary) with Qt 5.12.0 through 5.12.2.
+Qt 5.12.4 is a bug-fix release. It maintains both forward and backward
+compatibility (source and binary) with Qt 5.12.0 through 5.12.3.
 
 For more details, refer to the online documentation included in this
 distribution. The documentation is also available online:
@@ -17,4 +17,13 @@ https://bugreports.qt.io/
 Each of these identifiers can be entered in the bug tracker to obtain more
 information about a particular change.
 
- - This release contains only minor code improvements.
+****************************************************************************
+*                            Qt 5.12.4 Changes                             *
+****************************************************************************
+
+QtSerialBus
+-----------
+
+ - CAN Plugins
+   * Fixed the error message "Cannot configure TxEcho for open device"
+     when QCanBusDevice::ReceiveOwnKey was used in the SystecCAN plugin
