--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
-Qt 5.13.1 is a bug-fix release. It maintains both forward and backward
-compatibility (source and binary) with Qt 5.13.0.
+Qt 5.13.2 is a bug-fix release. It maintains both forward and backward
+compatibility (source and binary) with Qt 5.13.0 through 5.13.1.
 
 For more details, refer to the online documentation included in this
 distribution. The documentation is also available online:
@@ -17,4 +17,9 @@ https://bugreports.qt.io/
 Each of these identifiers can be entered in the bug tracker to obtain more
 information about a particular change.
 
- - This release contains only minor code improvements.
+****************************************************************************
+*                               Qt 5.13.2 Changes                          *
+****************************************************************************
+
+ -  [QTBUG-78546] Fixed problems on static builds where an arbitrary version
+    of resolveSymbol() was used instead of the correct one.
